--- a/src/aura/PartnerTierCurrentLevel/PartnerTierCurrentLevel.css
+++ b/src/aura/PartnerTierCurrentLevel/PartnerTierCurrentLevel.css
@@ -1,9 +1,9 @@
-/* 
-    Author:         Derrick Vuong
-    Company:        Salesforce
-    Description:    PartnerTierCurrentLevel.css
-    Date:           2-Nov-2018 
-*/
+/*
+ * Copyright (c) 2018, salesforce.com, inc.
+ * All rights reserved.
+ * SPDX-License-Identifier: BSD-3-Clause
+ * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
+ */
 .THIS  .slds-notify {
     display: flex;
     justify-content: center;
