--- a/src/aura/PartnerTierProgression/PartnerTierProgression.css
+++ b/src/aura/PartnerTierProgression/PartnerTierProgression.css
@@ -1,5 +1,8 @@
-/**
- * Created by cxu on 31/05/2017.
+/*
+ * Copyright (c) 2018, salesforce.com, inc.
+ * All rights reserved.
+ * SPDX-License-Identifier: BSD-3-Clause
+ * For full license text, see the LICENSE file in the repo root or https://opensource.org/licenses/BSD-3-Clause
  */
 
 .THIS .spinnerContainer {
@@ -8,8 +11,6 @@
     width: 32px;
     margin: 0 auto;
 }
-
-/***************** Original code below *******************/
 
 .THIS .progress-container{
     display: flex;
